--- a/Media Queries/04_Responsive-forms/style.css
+++ b/Media Queries/04_Responsive-forms/style.css
@@ -3,27 +3,36 @@
     padding: 0;
 }
 
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
 body {
-    display: flex;
+    box-sizing: border-box;
     align-items: center;
     justify-content: center;
     gap: 2em;
 }
 
 form {
+    width: 50%;
+    margin: 0 auto;
     margin: 4em;
     padding: 4em;
     border: 3px solid black;
 }
 
 p.login_title {
+    display: block;
     background-color: #fff;
     border: 2px solid black;
     border-radius: 2px;
     box-shadow: 0 0 1 0 rgba(0, 0, 0, 0.7);
     position: absolute;
-    top: 3.5em;
+    top: 0;
+    left: 0;
     z-index: 1;
+    padding: 0.3em;
 
 }
 
